counter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter
spec:
  replicas: 3
  selector:
    matchLabels:
      app: counter
  template:
    metadata:
      labels:
        app: counter
    spec:
      containers:
      - name: counter
        image: counter
        ports:
        - containerPort: 8081
        imagePullPolicy: Never
        volumeMounts:
        - name: vol-counter
          mountPath: /data
      volumes:
      - name: vol-counter
        persistentVolumeClaim:
          claimName: pvc-counter
---
apiVersion: v1
kind: Service
metadata:
  name: counter
spec:
  type: ClusterIP
  selector:
    app: counter
  ports:
  - port: 8080
    targetPort: 8081
